--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.0
   english_words: ^3.1.5
   fluttertoast: ^7.1.5
+  url_launcher: ^5.2.7
+  flutter_webview_plugin: ^0.3.11
 
 dev_dependencies:
   flutter_test:
